--- a/front/detail_product_pages/Detalle_Comic_Flashpoint.html
+++ b/front/detail_product_pages/Detalle_Comic_Flashpoint.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Planet Superheroes - Detalle Comic</title>
-    <link rel="stylesheet" href="/front/css/detail.css">
-    <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/detail.css">
+    <link rel="icon" href="../images/logo-favicon.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">      
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&family=Hachi+Maru+Pop&family=Patrick+Hand&display=swap');
@@ -21,29 +20,29 @@
                 <i class="fas fa-bars" id="btn-nav"></i>
                 <i class="fas fa-times" id="cancel"></i>
             </label>
-            <a class="navbar-logo" href="#">
-                <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+            <a class="navbar-logo" href="../../index.html">
+                <img class="logo-new" src="../images/logo_planet.png" alt="Planet SuperHeroes">
             </a>            
             <ul class="nav-op">
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html">INICIO</a>
+                    <a class="nav-link" href="../../index.html">INICIO</a>
                 </li>                        
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/about.html">¿QUIENES SOMOS?</a>
+                    <a class="nav-link" href="../about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/dcProducts.html">PRODUCTOS</a>
+                    <a class="nav-link" href="../dcProducts.html">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html#form">CONTACTO</a>
+                    <a class="nav-link" href="../../index.html#form">CONTACTO</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/login.html">INGRESAR</a>
+                    <a class="nav-link" href="../login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/registro.html">REGISTRO</a>
+                    <a class="nav-link" href="../registro.html">REGISTRO</a>
                 </li>
-            </ul>   
+            </ul>  
         </nav>
     </header>        
     
@@ -53,32 +52,32 @@
             <div class="product-imgs">
                 <div class="img-display">
                     <div class="img-showcase">
-                        <img src="/front/images/dc-supermanLast.jpg" alt="Superman_Comic">
-                        <img src="/front/images/dc-supermanLast.jpg" alt="Superman_Comic">
-                        <img src="/front/images/dc-supermanLast.jpg" alt="Superman_Comic">
+                        <img src="../images/dc-flash.jpg" alt="Flash_comic">
+                        <img src="../images/dc-flash.jpg" alt="Flash_comic">
+                        <img src="../images/dc-flash.jpg" alt="Flash_comic">
                     </div>
                 </div>
                 <div class="img-select">
                     <div class="img-item">
                         <a href="#" data-id="1">
-                            <img src="/front/images/dc-supermanLast.jpg" alt="Superman_Comic">
+                            <img src="../images/dc-flash.jpg" alt="Flash_comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="2">
-                            <img src="/front/images/dc-supermanLast.jpg" alt="Superman_Comic">
+                            <img src="../images/dc-flash.jpg" alt="Flash_comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="3">
-                            <img src="/front/images/dc-supermanLast.jpg" alt="Superman_Comic">
+                            <img src="../images/dc-flash.jpg" alt="Flash_comic">
                         </a>
                     </div>
                 </div>
             </div>
             <!--Card Der-->
             <div class="product-content">
-                <h2 class="product-title">Superman: The last</h2>
+                <h2 class="product-title">Flash: Flashpoint</h2>
                 <a href="#" class="product-link">Descubre más comics</a>
                 <div class="product-rating">
                     <i class="fa-solid fa-star"></i>
@@ -86,19 +85,19 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                    <span>4.4 (9)</span>
+                    <span>4.4 (5)</span>
                 </div>
                 <div class="product-price">
-                    <p class="last-price">Antes: <span>$5500.00</span></p>
-                    <p class="new-price">Ahora: <span>$4950.00 (10% off)</span></p>
+                    <p class="last-price">Antes: <span>$14000.00</span></p>
+                    <p class="new-price">Ahora: <span>$9800.00 (30% off)</span></p>
                 </div>
                 <div class="product-detail">
                     <h2>Descripción:</h2>
-                    <p>¡LAS MEJORES AVENTURAS DEL HOMBRE DE ACERO Y LA PRINCESA GUERRERA! Desde 1940, Wonder Woman ha sido un símbolo de la libertad, la justicia y la igualdad para personas en todas partes del mundo. En estas páginas nos ponemos nuestras tiaras y nuestros brazaletes indestructibles para unirnos al festejo de los ochenta años de la princesa Diana, recorriendo su pasado, presente y futuro. Superman es otro símbolo de la justicia, pero al protector de Metrópolis lo espera un futuro sombrío, donde ha desaparecido a manos de su peor enemigo... ¡uno que nadie espera! Lois Lane, antiguo interés romántico de Clark Kent, cuenta cómo fueron los últimos días del Hombre de Acero, en una aventura que homenajea al primer superhéroe de la historia.</p>
-                    <p>Páginas: 64<br>
+                    <p>¡Todo lo que Barry Allen conoce ha cambiado en un instante! Flash es el hombre más rápido del mundo, pero este no es su mundo. El curso de la historia ha cambiado y una nueva realidad ha reemplazado a la suya. Su madre está viva, sus seres queridos son extraños y sus amigos cercanos han cambiado, se han ido o peor. En un mundo al borde de una guerra cataclísmica, ¿dónde están los mejores héroes de la Tierra para detenerla?</p>
+                    <p>Páginas: 240<br>
                         Formato: 20x29x2cm<br>
                         Peso: 0.60 kgs<br>
-                        ISBN: 9788416998166</p>
+                        ISBN: 978-987-819-167-6</p>
                     <ul>
                         <li>Disponibilidad: En Stock</li>
                         <li>Envíos: A todo el país</li>
@@ -178,7 +177,7 @@
         &copy; Desarrolladores 2.0
     </div>     
       
-    <script src="/front/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
     </script>
