--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Planet Superheroes</title>
     <link
       rel="icon"
-      href="front/images/logo-favicon.ico"
+      href="./front/images/logo-favicon.ico"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="front/css/style.css" />
-    <link rel="stylesheet" href="front/css/Reseña.css" />
+    <link rel="stylesheet" href="./front/css/style.css" />
+    <link rel="stylesheet" href="./front/css/Reseña.css" />
 
     <script
       src="https://kit.fontawesome.com/6ff66d206f.js"
@@ -24,10 +24,10 @@
   </head>
   <body>
     <header>
-      <a class="navbar-logo" href="/index.html">
+      <a class="navbar-logo" href="./index.html">
         <img
           class="logo"
-          src="front/images/logo_planet.png"
+          src="./front/images/logo_planet.png"
           alt="Planet_SuperHeroes"
         />
       </a>
@@ -41,19 +41,19 @@
         <!-- Fin Menu Hamburguesa  -->
         <ul class="nav__links">
           <li>
-            <a href="front/pages/about.html">¿QUIENES SOMOS?</a>
+            <a href="front/about.html">¿QUIENES SOMOS?</a>
           </li>
           <li>
-            <a href="front/pages/marvelProducts.html">PRODUCTOS</a>
+            <a href="front/marvelProducts.html">PRODUCTOS</a>
           </li>
           <li>
             <a href="#form">CONTACTO</a>
           </li>
           <li>
-            <a href="front/pages/login.html">INGRESAR</a>
+            <a href="front/login.html">INGRESAR</a>
           </li>
           <li>
-            <a href="front/pages/registro.html">REGISTRO</a>
+            <a href="front/registro.html">REGISTO</a>
           </li>
         </ul>
       </nav>
