--- a/front/Reseña.html
+++ b/front/Reseña.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>RESEÑA</title>
-    <link rel="stylesheet" href="Reseña.css" />
+    <link rel="stylesheet" href="front/css/Reseña.css" />
   </head>
   <body>
     <div class="review-title">
