--- a/front/detail_product_pages/Detalle_Comic_Batman.html
+++ b/front/detail_product_pages/Detalle_Comic_Batman.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Planet Superheroes - Detalle Comic</title>
-    <link rel="stylesheet" href="/front/css/detail.css">
-    <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/detail.css">
+    <link rel="icon" href="../images/logo-favicon.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">      
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&family=Hachi+Maru+Pop&family=Patrick+Hand&display=swap');
@@ -21,31 +20,31 @@
                 <i class="fas fa-bars" id="btn-nav"></i>
                 <i class="fas fa-times" id="cancel"></i>
             </label>
-            <a class="navbar-logo" href="#">
-                <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+            <a class="navbar-logo" href="../../index.html">
+                <img class="logo-new" src="../images/logo_planet.png" alt="Planet SuperHeroes">
             </a>            
             <ul class="nav-op">
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html">INICIO</a>
+                    <a class="nav-link" href="../../index.html">INICIO</a>
                 </li>                        
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/about.html">¿QUIENES SOMOS?</a>
+                    <a class="nav-link" href="../about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/dcProducts.html">PRODUCTOS</a>
+                    <a class="nav-link" href="../dcProducts.html">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html#form">CONTACTO</a>
+                    <a class="nav-link" href="../../index.html#form">CONTACTO</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/login.html">INGRESAR</a>
+                    <a class="nav-link" href="../login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/registro.html">REGISTRO</a>
+                    <a class="nav-link" href="../registro.html">REGISTRO</a>
                 </li>
-            </ul>  
+            </ul>   
         </nav>
-    </header>       
+    </header>        
     
     <div class="card-wrapper">
         <div class="card">
@@ -53,52 +52,52 @@
             <div class="product-imgs">
                 <div class="img-display">
                     <div class="img-showcase">
-                        <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
-                        <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
-                        <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
+                        <img src="../images/batmanBN1.jpg" alt="Batman_comic">
+                        <img src="../images/batmanBN2.jpg" alt="Batman_comic">
+                        <img src="../images/batmanBN3.jpg" alt="Batman_comic">
                     </div>
                 </div>
                 <div class="img-select">
                     <div class="img-item">
                         <a href="#" data-id="1">
-                            <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
+                            <img src="../images/batmanBN1.jpg" alt="Batman_comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="2">
-                            <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
+                            <img src="../images/batmanBN2.jpg" alt="Batman_comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="3">
-                            <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
+                            <img src="../images/batmanBN3.jpg" alt="Batman_comic">
                         </a>
                     </div>
                 </div>
             </div>
             <!--Card Der-->
             <div class="product-content">
-                <h2 class="product-title">Batman: Killing Joker</h2>
+                <h2 class="product-title">Batman Comic</h2>
                 <a href="#" class="product-link">Descubre más comics</a>
                 <div class="product-rating">
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <span>4.9 (15)</span>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <span>4.5 (12)</span>
                 </div>
                 <div class="product-price">
-                    <p class="last-price">Antes: <span>$14000.00</span></p>
-                    <p class="new-price">Ahora: <span>$9800.00 (30% off)</span></p>
+                    <p class="last-price">Antes: <span>$3800.00</span></p>
+                    <p class="new-price">Ahora: <span>$3040.00 (20% off)</span></p>
                 </div>
                 <div class="product-detail">
                     <h2>Descripción:</h2>
-                    <p>De acuerdo con el motor de locura y caos conocido como el Joker, eso es todo lo que separa a los cuerdos de los psicóticos. Liberado una vez más de los confines del Asilo Arkham, está dispuesto a demostrar su perturbador punto. Y va a usar al principal policía de Gotham, el comisionado Jim Gordon, y a su brillante y bella hija Bárbara para hacerlo. Ahora Batman deberá correr para detener a su archienemigo antes de que su reinado de terror reclame a dos de los amigos más cercanos del Caballero Oscuro. ¿Podrá finalmente poner fin al ciclo de sed de sangre y locura que une a estos dos enemigos icónicos antes de que conduzca a su conclusión fatal? Y a medida que finalmente se revela el horroroso origen del Príncipe Payaso del Crimen, ¿la delgada línea que separa a la nobleza de Batman y la locura del Joker se romperá de una vez por todas? </p>
-                    <p>Páginas: 64<br>
-                        Formato: 20x29x2cm<br>
-                        Peso: 0.55 kgs<br>
-                        ISBN: 978-987-819-184-3</p>
+                    <p>El título es simple. El talento es espectacular. Presentada en escuetos tonos de blanco y negro que representan con facilidad la cosmovisión de Batman, llega esta colección de las aventuras del Caballero Oscuro. Con historias y dibujos de una alineación estelar de creadores de la industria del cómic, no es de extrañar que esta colección haya sido galardonada con el prestigioso premio Eisner en la categoría mejor antología y mejor historia corta (Héroes, por Archie Goodwin y Gary Gianni). </p>
+                    <p>Páginas: 224<br>
+                        Formato: 26x17x2cm<br>
+                        Peso: 0.6 kgs..<br>
+                        ISBN: 978-987-724-803-6</p>
                     <ul>
                         <li>Disponibilidad: En Stock</li>
                         <li>Envíos: A todo el país</li>
@@ -178,7 +177,7 @@
         &copy; Desarrolladores 2.0
     </div>     
       
-    <script src="/front/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
     </script>
