--- a/front/detail_product_pages/Detalle_Comic_Dead_Pool.html
+++ b/front/detail_product_pages/Detalle_Comic_Dead_Pool.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Planet Superheroes - Detalle Comic</title>
-    <link rel="stylesheet" href="/front/css/detail.css">
-    <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/detail.css">
+    <link rel="icon" href="../images/logo-favicon.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">      
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&family=Hachi+Maru+Pop&family=Patrick+Hand&display=swap');
@@ -21,29 +20,29 @@
                 <i class="fas fa-bars" id="btn-nav"></i>
                 <i class="fas fa-times" id="cancel"></i>
             </label>
-            <a class="navbar-logo" href="#">
-                <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+            <a class="navbar-logo" href="../../index.html">
+                <img class="logo-new" src="../images/logo_planet.png" alt="Planet SuperHeroes">
             </a>            
             <ul class="nav-op">
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html">INICIO</a>
+                    <a class="nav-link" href="../../index.html">INICIO</a>
                 </li>                        
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/about.html">¿QUIENES SOMOS?</a>
+                    <a class="nav-link" href="../about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/dcProducts.html">PRODUCTOS</a>
+                    <a class="nav-link" href="../dcProducts.html">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html#form">CONTACTO</a>
+                    <a class="nav-link" href="../../index.html#form">CONTACTO</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/login.html">INGRESAR</a>
+                    <a class="nav-link" href="../login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/registro.html">REGISTRO</a>
+                    <a class="nav-link" href="../registro.html">REGISTRO</a>
                 </li>
-            </ul>    
+            </ul>   
         </nav>
     </header>        
     
@@ -53,32 +52,32 @@
             <div class="product-imgs">
                 <div class="img-display">
                     <div class="img-showcase">
-                        <img src="/front/images/marvel-spiderman-amazing.jpg" alt="Spiderman_Comic">
-                        <img src="/front/images/marvel-spiderman-amazing.jpg" alt="Spiderman_Comic">
-                        <img src="/front/images/marvel-spiderman-amazing.jpg" alt="Spiderman_Comic">
+                        <img src="../images/marvel-deadpool.jpg" alt="Dead_Pool_Comic">
+                        <img src="../images/marvel-deadpool.jpg" alt="Dead_Pool_Comic">
+                        <img src="../images/marvel-deadpool.jpg" alt="Dead_Pool_Comic">
                     </div>
                 </div>
                 <div class="img-select">
                     <div class="img-item">
                         <a href="#" data-id="1">
-                            <img src="/front/images/marvel-spiderman-amazing.jpg" alt="Spiderman_Comic">
+                            <img src="../images/marvel-deadpool.jpg" alt="Dead_Pool_Comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="2">
-                            <img src="/front/images/marvel-spiderman-amazing.jpg" alt="Spiderman_Comic">
+                            <img src="../images/marvel-deadpool.jpg" alt="Dead_Pool_Comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="3">
-                            <img src="/front/images/marvel-spiderman-amazing.jpg" alt="Spiderman_Comic">
+                            <img src="../images/marvel-deadpool.jpg" alt="Dead_Pool_Comic">
                         </a>
                     </div>
                 </div>
             </div>
             <!--Card Der-->
             <div class="product-content">
-                <h2 class="product-title">Stan Lee meets Spiderman</h2>
+                <h2 class="product-title">Dead Pool Comic</h2>
                 <a href="#" class="product-link">Descubre más comics</a>
                 <div class="product-rating">
                     <i class="fa-solid fa-star"></i>
@@ -94,7 +93,7 @@
                 </div>
                 <div class="product-detail">
                     <h2>Descripción:</h2>
-                    <p>¡El primero de una serie de especiales independientes que celebran el 65 aniversario del empleo de Stan Lee en Marvel! Primero, Stan y el artista Olivier Coipel presentan un encuentro entre "El Hombre" y su creación de telarañas. Luego, Joss Whedon y Michael Gaydos te llevarán a una convención interdimensional de cómics en el tiempo. Y finalmente, una representación del clásico AMAZING SPIDER-MAN #87 con guión de Stan, en el que Spidey revela su verdadera identidad a sus amigos más cercanos.</p>
+                    <p>Es una historia de amor, Deadpool, ¡solo di que sí! Elsa Bloodstone, la cazadora de monstruos, está muriendo, y el único que puede salvarla es… ¡Wade Wilson! ¿Qué salió mal con la mística y mágica gema Bloodstone de Elsa? ¿Qué puede hacer Deadpool al respecto? ¿Y cuál es la verdad real de la maldición Bloodstone? Te esperan escándalo, traición y una dimensión llena de horrible sustancia viscosa. ¡Se va a poner complicado! ¡Entonces, el Rey de los Monstruos se enfrenta al Rey de los Dragones! Una secta antigua y malvada quiere matar a Deadpool. Un antiguo dios del espacio malvado quiere matar a Deadpool. ¿¡¿Por qué todos quieren matar a Deadpool?!</p>
                     <p>Páginas: 64<br>
                         Formato: 20x29x2cm<br>
                         Peso: 0.60 kgs<br>
@@ -178,7 +177,7 @@
         &copy; Desarrolladores 2.0
     </div>     
       
-    <script src="/front/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
     </script>
