--- a/front/detail_product_pages/Detalle_Comic_Ironman.html
+++ b/front/detail_product_pages/Detalle_Comic_Ironman.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Planet Superheroes - Detalle Comic</title>
-    <link rel="stylesheet" href="/front/css/detail.css">
-    <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/detail.css">
+    <link rel="icon" href="../images/logo-favicon.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">      
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&family=Hachi+Maru+Pop&family=Patrick+Hand&display=swap');
@@ -21,29 +20,29 @@
                 <i class="fas fa-bars" id="btn-nav"></i>
                 <i class="fas fa-times" id="cancel"></i>
             </label>
-            <a class="navbar-logo" href="#">
-                <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+            <a class="navbar-logo" href="../../index.html">
+                <img class="logo-new" src="../images/logo_planet.png" alt="Planet SuperHeroes">
             </a>            
             <ul class="nav-op">
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html">INICIO</a>
+                    <a class="nav-link" href="../../index.html">INICIO</a>
                 </li>                        
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/about.html">¿QUIENES SOMOS?</a>
+                    <a class="nav-link" href="../about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/dcProducts.html">PRODUCTOS</a>
+                    <a class="nav-link" href="../dcProducts.html">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html#form">CONTACTO</a>
+                    <a class="nav-link" href="../../index.html#form">CONTACTO</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/login.html">INGRESAR</a>
+                    <a class="nav-link" href="../login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/registro.html">REGISTRO</a>
+                    <a class="nav-link" href="../registro.html">REGISTRO</a>
                 </li>
-            </ul>  
+            </ul>    
         </nav>
     </header>       
     
@@ -53,32 +52,32 @@
             <div class="product-imgs">
                 <div class="img-display">
                     <div class="img-showcase">
-                        <img src="/front/images/marvel-blackwidow.jpg" alt="Black_Widow_Comic">
-                        <img src="/front/images/marvel-blackwidow.jpg" alt="Black_Widow_Comic">
-                        <img src="/front/images/marvel-blackwidow.jpg" alt="Black_Widow_Comic">
+                        <img src="../images/marvel-ironMan.jpg" alt="Ironman_comic">
+                        <img src="../images/marvel-ironMan.jpg" alt="Ironman_comic">
+                        <img src="../images/marvel-ironMan.jpg" alt="Ironman_comic">
                     </div>
                 </div>
                 <div class="img-select">
                     <div class="img-item">
                         <a href="#" data-id="1">
-                            <img src="/front/images/marvel-blackwidow.jpg" alt="Black_Widow_Comic">
+                            <img src="../images/marvel-ironMan.jpg" alt="Ironman_comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="2">
-                            <img src="/front/images/marvel-blackwidow.jpg" alt="Black_Widow_Comic">
+                            <img src="../images/marvel-ironMan.jpg" alt="Ironman_comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="3">
-                            <img src="/front/images/marvel-blackwidow.jpg" alt="Black_Widow_Comic">
+                            <img src="../images/marvel-ironMan.jpg" alt="Ironman_comic">
                         </a>
                     </div>
                 </div>
             </div>
             <!--Card Der-->
             <div class="product-content">
-                <h2 class="product-title">Black Widow</h2>
+                <h2 class="product-title">Ironman: The invincible</h2>
                 <a href="#" class="product-link">Descubre más comics</a>
                 <div class="product-rating">
                     <i class="fa-solid fa-star"></i>
@@ -94,7 +93,7 @@
                 </div>
                 <div class="product-detail">
                     <h2>Descripción:</h2>
-                    <p>La historia de espías del siglo! Natasha Romanoff es la espía más letal del Universo Marvel y el corazón palpitante de los Avengers. Pero cuando una figura misteriosa comienza a explotar su turbio pasado, ¡Black Widow debe pasar a la clandestinidad y desaparecer del mapa! ¿En quién puede confiar en esta red de engaños? Y lo que es más importante, ¿pueden sus amigos seguir confiando en ella? Natasha debe analizar todos los nombres de su pasado, ¡comenzando con Tony Stark y Bucky Barnes! Black Widow y el Soldado del Invierno tienen una gran historia, pero cuando se reúnan, pueden terminar sin futuro. Su compañera Yelena Belova llama a su puerta, pero, ¿puede ayudar a Natasha a superar su pasado? Y cuando Black Widow apunte a Hawkeye, ¡ella podría recibir un disparo en el corazón!</p>
+                    <p>Con un trozo de metralla incrustado en su pecho, peligrosamente cerca del corazón, lo único que mantiene con vida al multimillonario Tony Stark es su supertraje de hierro. Desafortunadamente para los villanos, también lo convierte en un arma devastadora contra el mal. Sus batallas contra algunas de las amenazas más grandes del cómic se cuentan en este volumen de 192 páginas con imágenes icónicas de Iron Man y un texto del legendario Roy Thomas, autor de 75 Years of Marvel Comics: From the Golden Age to the Silver Screen.</p>
                     <p>Páginas: 64<br>
                         Formato: 20x29x2cm<br>
                         Peso: 0.60 kgs<br>
@@ -178,7 +177,7 @@
         &copy; Desarrolladores 2.0
     </div>     
       
-    <script src="/front/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
     </script>
