--- a/front/detail_product_pages/Detalle_Comic_Supergirl_Brainiac.html
+++ b/front/detail_product_pages/Detalle_Comic_Supergirl_Brainiac.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Planet Superheroes - Detalle Comic</title>
-    <link rel="stylesheet" href="/front/css/detail.css">
-    <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/detail.css">
+    <link rel="icon" href="../images/logo-favicon.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">      
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&family=Hachi+Maru+Pop&family=Patrick+Hand&display=swap');
@@ -21,27 +20,27 @@
                 <i class="fas fa-bars" id="btn-nav"></i>
                 <i class="fas fa-times" id="cancel"></i>
             </label>
-            <a class="navbar-logo" href="#">
-                <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+            <a class="navbar-logo" href="../../index.html">
+                <img class="logo-new" src="../images/logo_planet.png" alt="Planet SuperHeroes">
             </a>            
             <ul class="nav-op">
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html">INICIO</a>
+                    <a class="nav-link" href="../../index.html">INICIO</a>
                 </li>                        
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/about.html">¿QUIENES SOMOS?</a>
+                    <a class="nav-link" href="../about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/dcProducts.html">PRODUCTOS</a>
+                    <a class="nav-link" href="../dcProducts.html">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html#form">CONTACTO</a>
+                    <a class="nav-link" href="../../index.html#form">CONTACTO</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/login.html">INGRESAR</a>
+                    <a class="nav-link" href="../login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/registro.html">REGISTRO</a>
+                    <a class="nav-link" href="../registro.html">REGISTRO</a>
                 </li>
             </ul>  
         </nav>
@@ -53,32 +52,32 @@
             <div class="product-imgs">
                 <div class="img-display">
                     <div class="img-showcase">
-                        <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
-                        <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
-                        <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
+                        <img src="../images/dc-superGirlpg.jpg" alt="Supergirl_comic">
+                        <img src="../images/dc-superGirlpg.jpg" alt="Supergirl_comic">
+                        <img src="../images/dc-superGirlpg.jpg" alt="Supergirl_comic">
                     </div>
                 </div>
                 <div class="img-select">
                     <div class="img-item">
                         <a href="#" data-id="1">
-                            <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
+                            <img src="../images/dc-superGirlpg.jpg" alt="Supergirl_comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="2">
-                            <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
+                            <img src="../images/dc-superGirlpg.jpg" alt="Supergirl_comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="3">
-                            <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
+                            <img src=../images/dc-superGirlpg.jpg" alt="Supergirl_comic">
                         </a>
                     </div>
                 </div>
             </div>
             <!--Card Der-->
             <div class="product-content">
-                <h2 class="product-title">Spiderman</h2>
+                <h2 class="product-title">Supergirl: Brainiac</h2>
                 <a href="#" class="product-link">Descubre más comics</a>
                 <div class="product-rating">
                     <i class="fa-solid fa-star"></i>
@@ -89,15 +88,15 @@
                     <span>4.7 (5)</span>
                 </div>
                 <div class="product-price">
-                    <p class="last-price">Antes: <span>$34000.00</span></p>
-                    <p class="new-price">Ahora: <span>$30600.00 (10% off)</span></p>
+                    <p class="last-price">Antes: <span>$14000.00</span></p>
+                    <p class="new-price">Ahora: <span>$9800.00 (30% off)</span></p>
                 </div>
                 <div class="product-detail">
                     <h2>Descripción:</h2>
-                    <p>Un gigantesco volumen, que reúne tanto Universo Spiderman como Spidergedón, las dos grandes sagas dedicadas a unir a todos los Hombres y Mujeres Araña, con sus respectivos cruces. En primer lugar, Dan Slott (El Asombroso Spiderman) y Olivier Coipel (Dinastía de M) se unen para ofrecerte el mayor evento en la historia de Spiderman. Más peligroso que nunca, Morlun amenaza a todos los Hombres Araña que existen en el Multiverso, pero esta vez no está solo: tiene a la familia a su lado. ¡Todos los Spiderman que han existido están en peligro! A continuación, Los Herederos han escapado y planean acabar con todas las arañas que existen. Será necesario un ejército para hacerlos frente. Spiderman, Octopus, Spider-Gwen, Miles, Spiderwoman, el Spiderman de PS4... y todos los demás estarán aquí. Contiene la traducción de los comic books originales Edge of Spider-Verse números 1 a 5, FCBD 2014: GotG, The Amazing Spider-Man números 4 y 7 a 15, Spider-Verse números 1 a 2, The Superior Spider-Man números 32 a 33, Spider-Man 2099 números 5 a 8, Scarlet Spiders números 1 a 3, Spider-Woman números 1 a 4, Spider-Verse Team-Up números 1 a 3 y Edge of Spider publicados en USA por Marvel Comics.</p>
-                    <p>Páginas: 300<br>
-                        Formato: 20x29x5cm<br>
-                        Peso: 0.80 kgs<br>
+                    <p>¡La Tierra está siendo atacada por mil millones de Braniacs! El malvado androide y sus fríos y calculadores clones han engañado a Superman para que se aleje de la órbita de la Tierra, dejando el planeta listo para ser cosechado. Sólo Supergirl tiene posibilidades de frenar el ejército del supervillano. ¿Pero regresará el Hombre de Acero a tiempo para ayudar a su primo menor?</p>
+                    <p>Páginas: 64<br>
+                        Formato: 20x29x2cm<br>
+                        Peso: 0.60 kgs<br>
                         ISBN: 9788416998166</p>
                     <ul>
                         <li>Disponibilidad: En Stock</li>
@@ -178,7 +177,7 @@
         &copy; Desarrolladores 2.0
     </div>     
       
-    <script src="/front/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
     </script>
