--- a/front/detail_product_pages/Detalle_Comic_X-Men.html
+++ b/front/detail_product_pages/Detalle_Comic_X-Men.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Planet Superheroes - Detalle Comic</title>
-    <link rel="stylesheet" href="/front/css/detail.css">
-    <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/detail.css">
+    <link rel="icon" href="../images/logo-favicon.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">      
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&family=Hachi+Maru+Pop&family=Patrick+Hand&display=swap');
@@ -21,27 +20,27 @@
                 <i class="fas fa-bars" id="btn-nav"></i>
                 <i class="fas fa-times" id="cancel"></i>
             </label>
-            <a class="navbar-logo" href="#">
-                <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+            <a class="navbar-logo" href="../../index.html">
+                <img class="logo-new" src="../images/logo_planet.png" alt="Planet SuperHeroes">
             </a>            
             <ul class="nav-op">
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html">INICIO</a>
+                    <a class="nav-link" href="../../index.html">INICIO</a>
                 </li>                        
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/about.html">¿QUIENES SOMOS?</a>
+                    <a class="nav-link" href="../about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/dcProducts.html">PRODUCTOS</a>
+                    <a class="nav-link" href="../dcProducts.html">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/index.html#form">CONTACTO</a>
+                    <a class="nav-link" href="../../index.html#form">CONTACTO</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/login.html">INGRESAR</a>
+                    <a class="nav-link" href="../login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="/front/pages/registro.html">REGISTRO</a>
+                    <a class="nav-link" href="../registro.html">REGISTRO</a>
                 </li>
             </ul>   
         </nav>
@@ -53,32 +52,32 @@
             <div class="product-imgs">
                 <div class="img-display">
                     <div class="img-showcase">
-                        <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
-                        <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
-                        <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
+                        <img src="../images/marvel-xmen.jpg" alt="X-Men_Comic">
+                        <img src="../images/marvel-xmen.jpg" alt="X-Men_Comic">
+                        <img src="../images/marvel-xmen.jpg" alt="X-Men_Comic">
                     </div>
                 </div>
                 <div class="img-select">
                     <div class="img-item">
                         <a href="#" data-id="1">
-                            <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
+                            <img src="../images/marvel-xmen.jpg" alt="X-Men_Comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="2">
-                            <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
+                            <img src="../images/marvel-xmen.jpg" alt="X-Men_Comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="3">
-                            <img src="/front/images/dc-batman.jpg" alt="Batman_comic">
+                            <img src="../images/marvel-xmen.jpg" alt="X-Men_Comic">
                         </a>
                     </div>
                 </div>
             </div>
             <!--Card Der-->
             <div class="product-content">
-                <h2 class="product-title">Batman: Rebirth</h2>
+                <h2 class="product-title">X-Men comic</h2>
                 <a href="#" class="product-link">Descubre más comics</a>
                 <div class="product-rating">
                     <i class="fa-solid fa-star"></i>
@@ -94,11 +93,11 @@
                 </div>
                 <div class="product-detail">
                     <h2>Descripción:</h2>
-                    <p>Hay dos nuevos héroes en la ciudad: un par de metahumanos enmascarados que tienen los poderes de Superman y muestran una devoción inquebrantable por preservar todo lo bueno de esta enfermiza urbe. Se hacen llamar Gotham y Gotham Girl, ha salvado la vida de Batman, han luchado junto a él y le han tomado como referente y ejemplo en su aprendizaje. Pero... ¿qué ocurre si los nuevos guardianes de Gotham se vuelven malvados? ¿Y si culpan al Caballero Oscuro de las tinieblas que amenazan con engullir su ciudad?</p>
+                    <p>¡El amanecer de los mutantes no para de asombrar! Fuera de Krakoa, Domino tiene una misión: encontrar a la persona que, de alguna forma, le está robando sus poderes... ¡antes de que se le acabe la suerte! Los Marauders todavía no asimilan lo drástico de su última pérdida. Y, por su parte, Wolverine continúa su cruzada imposible contra el Cartel de las Flores. Además: un capítulo especial de Jean Grey y Emma Frost que te dejará sin palabras.</p>
                     <p>Páginas: 64<br>
                         Formato: 20x29x2cm<br>
-                        Peso: 0.55 kgs<br>
-                        ISBN: 978-987-819-184-3</p>
+                        Peso: 0.60 kgs<br>
+                        ISBN: 9788416998166</p>
                     <ul>
                         <li>Disponibilidad: En Stock</li>
                         <li>Envíos: A todo el país</li>
@@ -178,7 +177,7 @@
         &copy; Desarrolladores 2.0
     </div>     
       
-    <script src="/front/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
     </script>
