--- a/front/login.html
+++ b/front/login.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Login</title>
-    <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/front/css/login.css">
+    <link rel="icon" href="images/logo-favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/login.css">
 </head>
 <!-- Formulario Iniciar Sesión -->
 <body>
     <section class="form-login">
         <form action="" id="form">
-        <img src="/front/images/logo_planet.png" alt="Logo" class="logo">
+        <img src="images/logo_planet.png" alt="Logo" class="logo">
         <h1>PLANET SUPER HEROES</h1>
         <h3>
             Inicio Sesión
@@ -49,9 +49,9 @@
         
         <p><a href="#">¿Olvidaste tu contraseña?</a></p>
         
-        <a class="go_back" href="/index.html">Volver al Inicio</a>
+        <a class="go_back" href="../index.html">Volver al Inicio</a>
         </form>
     </section>
-    <script src="/front/js/validacionLogin.js"></script>
+    <script src="js/validacionLogin.js"></script>
 <body>
 </html>
