--- a/front/marvelProducts.html
+++ b/front/marvelProducts.html
@@ -5,19 +5,19 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
-        <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
+        <link rel="icon" href="./images/logo-favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/front/css/productos.css">
+        <link rel="stylesheet" href="./css/productos.css">
         <title>Marvel Comics</title>
         <script src="https://kit.fontawesome.com/b10a384426.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <!-- Header -->
         <header>
-            <a class="navbar-logo" href="/index.html">
-                <img class="logo" src="/front/images/logo_planet.png" alt="Planet_SuperHeroes">
+            <a class="navbar-logo" href="../index.html">
+                <img class="logo" src="images/logo_planet.png" alt="Planet_SuperHeroes">
             </a>  
             <nav class="navbar">
                 <!-- Menu Hamburguesa -->
@@ -26,22 +26,22 @@
                     <i class="fas fa-bars" id="btn-nav"></i>
                     <i class="fas fa-times" id="cancel"></i>
                 </label>  
-                <!-- Fin Menu Hamburguesa  -->
+                <!-- Fin Menu Hamburguesa  --> 
                 <ul class="nav__links">  
                     <li>
-                        <a href="/index.html">INICIO</a>
+                        <a href="../index.html">INICIO</a>
                     </li>                      
                     <li>
-                        <a href="about.html">¿QUIENES SOMOS?</a>
+                        <a href="./about.html">¿QUIENES SOMOS?</a>
                     </li>
                     <li>
-                        <a href="marvelProducts.html">PRODUCTOS</a>
+                        <a href="./marvelProducts.html">PRODUCTOS</a>
                     </li>
                     <li>
-                        <a href="login.html">INGRESAR</a>
+                        <a href="./login.html">INGRESAR</a>
                     </li>
                     <li>
-                        <a href="registro.html">REGISTRO</a>
+                        <a href="./registro.html">REGISTRO</a>
                     </li>
                 </ul>   
             </nav>
@@ -104,6 +104,6 @@
     <div class="copyright">
         &copy; Desarrolladores 2.0
     </div>
-    <script src="/front/js/productos.js"></script>
+    <script src="./js/productos.js"></script>
 </body>
 </html>
