small changes front

--- a/front/dcProducts.html
+++ b/front/dcProducts.html
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div>
-          <img src="./images/dc-batmanReborn.jpg" alt="Comic_Batman" />
+          <img src="./images/batmanBN1.jpg" alt="Comic_Batman" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
