--- a/front/detail_product_pages/Detalle_Comic_Supergirl_Brainiac.html
+++ b/front/detail_product_pages/Detalle_Comic_Supergirl_Brainiac.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="3">
-                            <img src=../images/dc-superGirlpg.jpg" alt="Supergirl_comic">
+                            <img src="../images/dc-superGirlpg.jpg" alt="Supergirl_comic">
                         </a>
                     </div>
                 </div>
