--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a href="front/login.html">INGRESAR</a>
           </li>
           <li>
-            <a href="front/registro.html">REGISTO</a>
+            <a href="front/registro.html">REGISTRO</a>
           </li>
         </ul>
       </nav>
